# a-mir-formality

./: .gitignore  404.html  Cargo.toml  HEAD.txt  README.md  debug.diff  flake.nix  index.html  main.txt  reformat-logs.py  revert-redex-changes  rust-toolchain  rust-toolchain.toml  shell.nix  sitemap.xml  test  triagebot.toml  wip.md
crates/formality-body/: Cargo.toml
crates/formality-body/src/: grammar.rs  lib.rs
crates/formality-check/: Cargo.toml
crates/formality-check/src/: adts.rs  borrow_check.rs  coherence.rs  fns.rs  impls.rs  lib.rs  mini_rust_check.rs  traits.rs  where_clauses.rs
crates/formality-check/src/borrow_check/: liveness.rs  nll.rs  wf.rs
crates/formality-check/src/mini_rust_check/: test.rs
crates/formality-core/: Cargo.toml  README.md
crates/formality-core/src/: all_into.rs  binder.rs  cast.rs  collections.rs  derive_links.rs  fixed_point.rs  fold.rs  fuzz.rs  interned.rs  judgment.rs  language.rs  lib.rs  parse.rs  substitution.rs  term.rs  test_util.rs  util.rs  variable.rs  visit.rs
crates/formality-core/src/binder/: fuzz.rs
crates/formality-core/src/fixed_point/: stack.rs
crates/formality-core/src/judgment/: assertion.rs  coverage.rs  memo.rs  proven_set.rs  runtime.rs  test_explicit_fail.rs  test_fallible.rs  test_filtered.rs  test_fixed_point.rs  test_for_all.rs  test_panic.rs  test_reachable.rs
crates/formality-core/src/parse/: parser.rs
crates/formality-core/src/variable/: cast_impls.rs  debug_impls.rs
crates/formality-core/tests/: coverage.rs
crates/formality-coverage/: Cargo.toml
crates/formality-coverage/src/: diff.rs  jsonl.rs  lib.rs  report.rs  scrape.rs  summary.rs
crates/formality-coverage/tests/: scrape.rs  summary.rs
crates/formality-decl/: Cargo.toml
crates/formality-decl/src/: db.rs  grammar.rs  lib.rs  orphan_rules.rs  test.rs  to_clause.rs
crates/formality-decl/src/to_clause/: adts.rs  associated_tys.rs  crate_items.rs  crates.rs  fns.rs  impls.rs  test.rs  traits.rs
crates/formality-infer/: Cargo.toml
crates/formality-infer/src/: bound.rs  eq.rs  extrude.rs  lib.rs  occurs.rs  outlives.rs  query.rs  rigid.rs  sub.rs  test.rs
crates/formality-infer/src/query/: test.rs
crates/formality-logic/: Cargo.toml
crates/formality-logic/src/: cosld.rs  db.rs  elaborate_hypotheses.rs  env.rs  hypotheses.rs  lib.rs  recursive.rs
crates/formality-logic/src/cosld/: test.rs
crates/formality-logic/src/db/: mock.rs
crates/formality-logic/src/elaborate_hypotheses/: test.rs
crates/formality-logic/src/env/: bound.rs  eq.rs  extrude.rs  occurs.rs  outlives.rs  query.rs  rigid.rs  sub.rs  test.rs  well_formed.rs
crates/formality-macros/: Cargo.toml  READE.md
crates/formality-macros/src/: attrs.rs  cast.rs  constructors.rs  custom.rs  debug.rs  fixed_point.rs  fold.rs  fuzz.rs  lib.rs  parse.rs  precedence.rs  reject.rs  spec.rs  term.rs  test.rs  variable.rs  variants.rs  visit.rs
crates/formality-macros/src/parse/: spec.rs
crates/formality-main/: Cargo.toml
crates/formality-main/src/: main.rs
crates/formality-mdbook/: Cargo.toml  README.md
crates/formality-mdbook/src/: lib.rs  main.rs
crates/formality-mir/: Cargo.toml
crates/formality-mir/src/: grammar.rs  lib.rs  type_check.rs
crates/formality-prove/: Cargo.toml
crates/formality-prove/src/: decls.rs  env.rs  lib.rs  program.rs  prove.rs  test.rs  test_util.rs
crates/formality-prove/src/prove/: combinators.rs  constraints.rs  env.rs  forall.rs  is_int.rs  is_local.rs  minimize.rs  negation.rs  prove_after.rs  prove_apr.rs  prove_apr_via.rs  prove_const_has_type.rs  prove_effect.rs  prove_effect_subset.rs  prove_eq.rs  prove_normalize.rs  prove_outlives.rs  prove_pr.rs  prove_pr_via.rs  prove_sub.rs  prove_via.rs  prove_wc.rs  prove_wc_list.rs  prove_wf.rs  subst.rs  zip.rs
crates/formality-prove/src/test/: adt_wf.rs  eq_assumptions.rs  eq_partial_eq.rs  exists_constraints.rs  expanding.rs  is_local.rs  magic_copy.rs  occurs_check.rs  simple_impl.rs  test_effect_subset.rs  universes.rs
crates/formality-rust/: Cargo.toml
crates/formality-rust/src/: codegen.rs  convert.rs  fuzz.rs  grammar.rs  lib.rs  pp.rs  prove.rs  test.rs  test_util.rs  to_decl.rs  trait_binder.rs
crates/formality-rust/src/check/: adts.rs  borrow_check.rs  closures.rs  coherence.rs  core_crate.rs  fns.rs  implied_bounds.rs  impls.rs  mini_rust_check.rs  mod.rs  traits.rs  where_clauses.rs
crates/formality-rust/src/codegen/: code_block.rs  helpers.rs  minirust.rs  mod.rs  ord_by_debug.rs  scope.rs  seme_region.rs  test.rs
crates/formality-rust/src/codegen_judgment/: seme_region.rs  test.rs
crates/formality-rust/src/convert/: fns.rs  structs_enums_and_adts.rs  traits_and_impls.rs  tys.rs
crates/formality-rust/src/grammar/: closures.rs  consts.rs  crates.rs  feature.rs  fns.rs  formulas.rs  ids.rs  kinded.rs  minirust.rs  mir.rs  program.rs  structs_enums_and_adts.rs  traits_and_impls.rs  ty.rs  wc.rs
crates/formality-rust/src/pp/: fns.rs  structs_enums_and_adts.rs  traits_and_impls.rs  tys.rs
crates/formality-rust/src/prove/: combinators.rs  constraints.rs  decls.rs  env.rs  is_local.rs  negation.rs  prove.rs  prove_after.rs  prove_const_has_type.rs  prove_eq.rs  prove_normalize.rs  prove_outlives.rs  prove_sub.rs  prove_via.rs  prove_wc.rs  prove_wc_list.rs  prove_wf.rs  test_util.rs
crates/formality-rust/src/to_decl/: associated_tys.rs  enums.rs  fields.rs  fns.rs  structs.rs  trait_impls.rs  traits.rs  variants.rs  where_clauses_and_bounds.rs
crates/formality-rust/src/to_rust/: context.rs  crates.rs  expr.rs  (+9 more)
crates/formality-rust/tests/: basic--hello_world.rs  basic--impl_Debug_for_i32.rs  basic--supertraits-hr.rs  basic--supertraits.rs  basic--where-clauses.rs  coinductive.rs  hello_world.rs  impl-vs-trait-fn--absolutely_same.rs  impl-vs-trait-fn.rs  wf-impl--supertrait-required.rs
crates/formality-types/: Cargo.toml
crates/formality-types/src/: cast.rs  collections.rs  db.rs  derive_links.rs  env.rs  fixed_point.rs  fold.rs  from_into_term.rs  fuzz.rs  grammar.rs  hook.rs  judgment.rs  lib.rs  matcher.rs  parse.rs  term.rs  visit.rs
(+792 files in other folders)
