[package]
name = "formality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private=true

[dev-dependencies]
pretty_assertions = "1.3.0"
expect-test = "1.4.0"
formality-macros = { version = "0.1.0", path = "crates/formality-macros" }
formality-core = { version = "0.1.0", path = "crates/formality-core" }


[dependencies]
anyhow = "1"
clap = { version = "4.0.9", features = ["derive"] }
formality-rust = { version = "0.1.0", path = "crates/formality-rust" }
formality-types = { version = "0.1.0", path = "crates/formality-types" }
formality-check = { version = "0.1.0", path = "crates/formality-check" }
formality-prove = { version = "0.1.0", path = "crates/formality-prove" }
ui_test = "0.12"

[workspace]
members = [
    "crates/formality-macros",
    "crates/formality-core",
    "crates/formality-types",
    "crates/formality-check",
    "crates/formality-rust",
    "crates/formality-prove",
]

[[test]]
name = "ui"
harness = false
