[package]
name = "a-mir-formality"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Model of the Rust type system maintained by the Rust types team (in development)"
homepage = "https://rust-lang.github.io/a-mir-formality/"
repository = "https://github.com/rust-lang/a-mir-formality/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private=true

[dev-dependencies]
pretty_assertions = "1.3.0"
expect-test = "1.4.0"
formality-macros = { version = "0.1.0", path = "crates/formality-macros" }
formality-core = { version = "0.1.0", path = "crates/formality-core" }
tracing = "0.1.40"


[dependencies]
anyhow = "1"
clap = { version = "4.0.9", features = ["derive"] }
formality-rust = { version = "0.1.0", path = "crates/formality-rust" }
formality-types = { version = "0.1.0", path = "crates/formality-types" }
formality-check = { version = "0.1.0", path = "crates/formality-check" }
formality-prove = { version = "0.1.0", path = "crates/formality-prove" }
formality-core = { version = "0.1.0", path = "crates/formality-core" }
formality-smir = { version = "0.1.0", path = "crates/formality-smir" }
expect-test = "1.4.0"
bolero = "0.11.1"

[workspace]
members = [
    "crates/formality-macros",
    "crates/formality-core",
    "crates/formality-types",
    "crates/formality-check",
    "crates/formality-rust",
    "crates/formality-prove",
    "crates/formality-smir",
]
