[package]
name = "formality-body"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
formality-macros = { path = "../formality-macros" }
formality-decl = { path = "../formality-decl" }
formality-types = { path = "../formality-types" }
tracing = "0.1"

[dev-dependencies]
expect-test = "1.4.0"
test-log = { version = "0.2.11", features = ["trace"] }
env_logger = "*"
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}