[package]
name = "formality-core"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Language-independent formality system used by a-mir-formality"
homepage = "https://rust-lang.github.io/a-mir-formality/"
repository = "https://github.com/rust-lang/a-mir-formality/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
env_logger = "0.10.0"
stacker = "0.1.15"
tracing = "0.1"
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
tracing-tree = { version = "0.2" }
formality-macros = { version = "0.1.0", path = "../formality-macros" }
anyhow = "1.0.75"
contracts = "0.6.3"
final_fn = "0.1.0"
itertools = "0.12.0"
either = "1.9.0"
expect-test = "1.4.1"
regex = "1.10.2"
bolero = "0.11.1"

[dev-dependencies]
expect-test = "1.4.1"
