[package]
name = "formality-decl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
formality-types = { path = "../formality-types" }
formality-macros = { path = "../formality-macros" }
formality-core = { path = "../formality-core" }