[package]
name = "formality-logic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-new = "0.5.9"
formality-types = { path = "../formality-types" }
formality-macros = { path = "../formality-macros" }
formality-core = { path = "../formality-core" }
formality-infer = { path = "../formality-infer" }
tracing = "0.1"
contracts = "0.6.3"

[dev-dependencies]
expect-test = "1.4.0"
