[package]
name = "formality-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.21"
proc-macro2 = "1.0"
syn = "1.0.102"
synstructure = "0.12.6"
tracing = "0.1"
convert_case = "0.6.0"

[dev-dependencies]
expect-test = "1.4.0"
