[package]
name = "formality-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR APACHE-2"
description = "Macros used by a-mir-formality and formality-core"
homepage = "https://rust-lang.github.io/a-mir-formality/"
repository = "https://github.com/rust-lang/a-mir-formality/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.21"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full"] }
synstructure = "0.13.0"
tracing = "0.1"
convert_case = "0.6.0"

[dev-dependencies]
expect-test = "1.4.0"
