[package]
name = "formality-main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
formality-rust = { path = "../formality-rust" }
formality-types = { path = "../formality-types" }
clap = { version = "4.0.9", features = ["derive"] }
anyhow = "1.0.66"
