[package]
name = "formality-mdbook"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "mdbook preprocessor for rendering judgment_fn! definitions and anchored code snippets"

[[bin]]
name = "formality-mdbook"
path = "src/main.rs"

[dependencies]
anyhow = "1"
formality-coverage = { version = "0.1.0", path = "../formality-coverage" }
mdbook-preprocessor = "0.5"
regex = "1"
serde_json = "1"
