[package]
name = "formality-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
formality-types = { path = "../formality-types" }
formality-macros = { path = "../formality-macros" }
formality-core = { path = "../formality-core" }
formality-prove = { path = "../formality-prove" }
anyhow = "1.0.66"
tracing = "0.1"
bolero = "0.11.1"

[dev-dependencies]
expect-test = "1.4.0"
