[package]
name = "formality-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
formality-types = { path = "../formality-types" }
formality-macros = { path = "../formality-macros" }
formality-core = { path = "../formality-core" }
anyhow = "1.0.66"
contracts = "0.6.3"
tracing = "0.1"
fn-error-context = "0.2.0"
itertools = "0.10.5"

[dev-dependencies]
expect-test = "1.4.0"
