[package]
name = "formality-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
formality-macros = { path = "../formality-macros" }
formality-core = { path = "../formality-core" }
anyhow = "1.0.66"
lazy_static = "1.4.0"
contracts = "0.6.3"
tracing = "0.1"
fn-error-context = "0.2.0"
itertools = "0.10.5"
stacker = "0.1.15"
extension-trait = "1.0.1"

[dev-dependencies]
expect-test = "1.4.0"
