[package]
name = "formality-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
lazy_static = "1.4.0"
formality-core = { path = "../formality-core" }
formality-macros = { path = "../formality-macros" }