[package]
name = "formality-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
lazy_static = "1.4.0"
formality-core = { path = "../formality-core" }
tracing = "0.1"
contracts = "0.6.3"
stacker = "0.1.15"
extension-trait = "1.0.1"
bolero = "0.11.1"

[dev-dependencies]
expect-test = "1.4.0"
